<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_analyze_passwords"
            android:icon="@drawable/ic_analytics"
            android:title="@string/menu_analyze_passwords" />
        <item
            android:id="@+id/nav_recycle_bin"
            android:icon="@drawable/ic_recycle_bin"
            android:title="@string/menu_recycle_bin" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_suggest_idea"
            android:icon="@drawable/ic_lightbulb"
            android:title="@string/menu_suggest_idea" />
    </group>
</menu>
